--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Malak Bachri
-#logo:
+logo: assests/profile-pic.jpeg
 #description:text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
