--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Malak Bachri
-logo: assests/profile-pic.jpeg
-#description:text below image
+logo: assests/portfolio-profile-picture.png
+description:🎓| Honors student at Southern Arkansas University 💻| Majoring in Computer Science with a 🛡️Cybersecurity certification 🧮| Minoring in Mathematics
 #show_downloads: true
 theme: jekyll-theme-minimal
