--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: Malak Bachri
 logo: assests/portfolio-profile-picture.png
-description: 🎓| Honors student at Southern Arkansas University 
-💻| Majoring in Computer Science with a 🛡️Cybersecurity certification 
-🧮| Minoring in Mathematics
+description: 🎓| Honors student at Southern Arkansas University 💻| Majoring in Computer Science with a 🛡️Cybersecurity certification 🧮| Minoring in Mathematics
 #show_downloads: true
 theme: jekyll-theme-minimal
